--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@ body,
 html,
 #root,
 .App {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0; */
   background-color: black;
   color: white !important;
 }
