--- a/src/pages/Homepage/components/MovieCard/MovieCard.style.css
+++ b/src/pages/Homepage/components/MovieCard/MovieCard.style.css
@@ -15,6 +15,10 @@
   color: white;
   font-weight: bold;
   overflow-wrap: break-word;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .overlay:hover {
@@ -25,4 +29,35 @@
   transform: scale(1.3) translateZ(20px);
   z-index: 2; /* 다른 카드 위로 올라오도록 설정 */
   position: relative; /* 부모와의 관계에서 z-index가 작동하도록 설정 */
+}
+
+.overlay-title > h1 {
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.overlay-badge {
+  display: flex;
+  gap: 5px;
+}
+
+.overlay-info {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+.overlay-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.overlay-icon {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
