--- a/src/common/MovieSlider/MovieSlider.style.css
+++ b/src/common/MovieSlider/MovieSlider.style.css
@@ -3,10 +3,22 @@
   height: 440px;
 }
 
-@media (max-width: 480px) {
+@medias (max-width: 480px) {
   .carousel-container {
+    overflow: hidden;
     height: 330px;
     display: flex;
     justify-content: space-between;
   }
+}
+
+.movie-slider-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-slider-container > h3 {
+  margin-bottom: -30px;
+  font-weight: 700;
+  font-size: 2rem;
 }
